--- a/src/assets/fonts/Pacifico.css
+++ b/src/assets/fonts/Pacifico.css
@@ -1,6 +1,8 @@
 @font-face {
   font-family: Pacifico;
-  src: url(Pacifico-Regular.ttf) format('truetype');
+  src:
+    url(Pacifico-Regular.woff2) format('woff2'),
+    url(Pacifico-Regular.woff) format('woff');
   font-weight: normal;
   font-style: normal;
 }
