--- a/src/assets/fonts/CrimsonText.css
+++ b/src/assets/fonts/CrimsonText.css
@@ -1,20 +1,26 @@
 @font-face {
   font-family: 'CrimsonText Regular';
-  src: url(CrimsonText-Regular.ttf) format('truetype');
+  src:
+    url(CrimsonText-Regular.woff2) format('woff2'),
+    url(CrimsonText-Regular.woff) format('woff');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'CrimsonText SemiBold';
-  src: url(CrimsonText-SemiBold.ttf) format('truetype');
+  src:
+    url(CrimsonText-SemiBold.woff2) format('woff2'),
+    url(CrimsonText-SemiBold.woff) format('woff');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'CrimsonText Bold';
-  src: url(CrimsonText-Bold.ttf) format('truetype');
+  src:
+    url(CrimsonText-Bold.woff2) format('woff2'),
+    url(CrimsonText-Bold.woff) format('woff');
   font-weight: normal;
   font-style: normal;
 }
